--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 VITE_CURRENCY = '$'
 
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZGlyZWN0LXJvb3N0ZXItNi5jbGVyay5hY2NvdW50cy5kZXYk
+
+VITE_BASE_URL = http://localhost:3000
